--- a/image vd.html
+++ b/image vd.html
@@ -8,10 +8,11 @@
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
 	<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/drag-drop.js'></script>
 <style type='text/css'>
-	canvas, div#frame {
+	canvas, div#img-frame {
 		border-style: double;
 		background-color: var(--text-color);
 	}
+	div#img-frame, div#img-frame img { width: 300px; }
 	div {
 		padding: 0;
 		line-height: 0;
@@ -19,7 +20,13 @@
 		background-size: contain;
 		margin: 1em;
 	}
-	div#frame >* {
+	div#slider-frame {
+		display: grid;
+		grid-gap: 0.5em;
+		grid-template-columns: 1em 300px;
+		grid-template-rows: 1em 400px;
+	}
+	div#img-frame >* {
 		position: absolute;
 		margin: 0;
 		padding: 0;
@@ -28,20 +35,25 @@
 	div.slider {
 		display: flex;
 		flex-direction: row;
+		height: 1em;
+		width: 300px;
 	}
-	div.slider:nth-child(6) { grid-column: 1/5; }
-	div.slider:nth-child(5) { flex-direction: column; }
+	div.slider.vertical {
+		flex-direction: column;
+		width: 1em;
+		height: 300px;
+	}
 	input[type='range'] {
-		writing-mode: horizontal-tb;
-		width: 8em;
+		writing-mode: vertical-tb;
+		width: 50%;
 		appearance: none;
 		accent-color: var(--text-color);
 		background-color: none;
 		cursor: pointer;
 	}
-	input[type='range'].vertical {
+	div.slider.vertical > input[type='range'] {
 		writing-mode: vertical-lr;
-		height: 8em;
+		height: 50%;
 	}
 	input[type='range']::-webkit-slider-runnable-track, input[type='range']::-moz-range-track {
 		background-color: var(--bord-color);
@@ -56,15 +68,15 @@
 		mix-blend-mode: normal;
 		aspect-ratio: auto;
 	}
-	p {
-		width: 2px;
-		height: 100%;
+	div#img-frame > p {
+		width: 100%;
+		height: 2px;
 		background-color: deeppink;
 		display: inline-block;
 	}
-	p.vertical {
-		width: 100%;
-		height: 2px;
+	div#img-frame > p.vertical {
+		width: 2px;
+		height: 100%;
 	}
 </style></head><body>
 	<input type='file' accept='image/png, image/jpg, image/bmp' />
@@ -73,33 +85,42 @@
 		<button onclick='rotateLeft()'>incliner vers la gauche</button>
 		<button onclick='rotateRight()'>incliner vers la droite</button>
 		<button onclick='validall()'>valider</button>
-		<div class='slider'>
-			<input type='range' min='0' max='100' value='0' class='vertical' />
-			<input type='range' min='0' max='100' value='100' class='vertical' />
+		<a href='' download=''>télécharger</a>
+		<div id='slider-frame'>
+			<p></p>
+			<div class='slider'><input type='range' min='0' max='100' value='0' /><input type='range' min='0' max='100' value='100' /></div>
+			<div class='slider vertical'>
+				<input type='range' min='0' max='100' value='0' /><input type='range' min='0' max='100' value='100' />
+			</div>
+			<div id='img-frame'><img src=''><p class='vertical'></p><p class='vertical'></p><p></p><p></p></div>
 		</div>
-		<div class='slider'><input type='range' min='0' max='100' value='0' /><input type='range' min='0' max='100' value='100' /></div>
-		<div id='frame'><img src=''><p class='vertical'></p><p class='vertical'></p><p></p><p></p></div>
 	</section>
 	<section id='charger'></section>
 </body><script type='text/javascript'>
 	const imageModif = document.getElementsByTagName ('img')[0];
-	const imageFrame = document.getElementById ('frame');
+	const imageFrame = document.getElementById ('img-frame');
 //	const canvas = document.getElementsByTagName ('canvas')[0];
 	const canvas = document.createElement ('canvas');
 	const context = canvas.getContext ('2d');
 	const imageRef = { src: "", width: 0, height: 0, rotation: 0, xo: 0, yo: 0, xu: 100, yu: 100, nbRotation: 0 };
+	const linkDownload = document.getElementsByTagName ('a')[0];
 	const uploader = document.getElementsByTagName ('input')[0];
 	uploader.addEventListener ('change', function (event){
 		imageRef.src = URL.createObjectURL (event.target.files[0]);
 		imageModif.src = imageRef.src;
 		const p= event.target.files[0].name.lastIndexOf ('.');
-		imageModif.alt = event.target.files[0].name.substring (0,p) +' bis' + event.target.files[0].name.substring (p);
+		linkDownload.download = event.target.files[0].name.substring (0,p) +' bis' + event.target.files[0].name.substring (p);
+		console.log (event.target.files[0].name.substring (0,p) +' bis' + event.target.files[0].name.substring (p));
+		imageModif.alt = event.target.files[0].name.substring (0,p);
 	});
 	imageModif.onload = function(){
 	//	if (imageRef.src === this.src){
 		if ('blob:null/' === this.src.substring (0,10)){
-			imageRef.width = this.width;
-			imageRef.height = this.height;
+			const img = new Image();
+			img.src = this.src;
+			console.dir (img);
+			imageRef.width = img.width;
+			imageRef.height = img.height;
 			canvas.height = this.height;
 			canvas.width = this.width;
 			imageFrame.style.height = canvas.height + 'px';
@@ -120,9 +141,6 @@
 		if (imageRef.nbRotation ===4) imageRef.nbRotation =0;
 	}
 	// redresser
-	function degreeTOradian (degree){ return degree * Math.PI / 180; }
-	function degreeTOcos (degree){ return Math.cos (degree * Math.PI / 180); }
-	function degreeTOsin (degree){ return Math.sin (degree * Math.PI / 180); }
 	function rotateLeft(){
 		imageRef.rotation -=1;
 		if (imageRef.rotation <-90) imageRef.rotation = -90;
@@ -151,19 +169,19 @@
 	const movingLines = imageFrame.getElementsByTagName ('p');
 	const movingInputs = document.body.getInputsByType ('range');
 	movingInputs[0].onchange = function(){
-		movingLines[0].style.top = this.value + '%';
+		movingLines[0].style.left = this.value + '%';
 		imageRef.yo = parseInt (this.value);
 	}
 	movingInputs[1].onchange = function(){
-		movingLines[1].style.top = this.value + '%';
+		movingLines[1].style.left = this.value + '%';
 		imageRef.yu = parseInt (this.value);
 	}
 	movingInputs[2].onchange = function(){
-		movingLines[2].style.left = this.value + '%';
+		movingLines[2].style.top = this.value + '%';
 		imageRef.xo = parseInt (this.value);
 	}
 	movingInputs[3].onchange = function(){
-		movingLines[3].style.left = this.value + '%';
+		movingLines[3].style.top = this.value + '%';
 		imageRef.xu = parseInt (this.value);
 	}
 	function validall(){
@@ -202,6 +220,7 @@
 		imageModif.height = canvas.height;
 		imageFrame.style.height = canvas.height + 'px';
 		imageFrame.style.width = canvas.width + 'px';
+		linkDownload.href = canvas.toDataURL();
 		document.body.appendChild (canvas);
 	}
 </script></html>
