--- a/image vc.html
+++ b/image vc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-	<title>recadrage de photo</title>
+	<title></title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
 	<base target='_blank'>
@@ -11,7 +11,6 @@
 	canvas, div#frame {
 		border-style: double;
 		background-color: var(--text-color);
-		width: 300px;
 	}
 	div {
 		padding: 0;
@@ -35,8 +34,8 @@
 		display: flex;
 		flex-direction: row;
 	}
-	div.slider:nth-child(6) { grid-column: 1/5; }
-	div.slider:nth-child(5) { flex-direction: column; }
+	div.slider:nth-child(5) { grid-column: 1/5; }
+	div.slider:nth-child(6) { flex-direction: column; }
 	input[type='range'] {
 		writing-mode: horizontal-tb;
 		width: 8em;
@@ -76,65 +75,59 @@
 	<section id='frame-result'>
 		<input type='file' accept='image/png, image/jpg, image/bmp' />
 		<a class='button' download='' href=''>télécharger</a>
+		<canvas></canvas>
 	</section>
 	<section id='frame-action'>
 		<button onclick='tumble90degree()'>basculer</button>
 		<button onclick='rotateLeft()'>incliner à gauche</button>
 		<button onclick='rotateRight()'>incliner à droite</button>
 		<button onclick='validall()'>valider</button>
+		<div class='slider'><input type='range' min='0' max='100' value='0' /><input type='range' min='0' max='100' value='100' /></div>
 		<div class='slider'>
 			<input type='range' min='0' max='100' value='0' class='vertical' />
 			<input type='range' min='0' max='100' value='100' class='vertical' />
 		</div>
-		<div class='slider'><input type='range' min='0' max='100' value='0' /><input type='range' min='0' max='100' value='100' /></div>
 		<div id='frame'>
-			<img />
-			<canvas></canvas>
+			<img src=''>
 			<p class='vertical'></p><p class='vertical'></p><p></p><p></p>
 		</div>
 	</section>
 	<img src='' id='ref' style='display: none;' />
 </body><script type='text/javascript'>
 	const frames = document.getElementsByTagName ('section');
-	const canvas = document.createElement ('canvas');
-//	const canvas = document.getElementsByTagName ('canvas')[0];
-	console.log (canvas.constructor.name);
+	const canvas = document.getElementsByTagName ('canvas')[0];
 	const context = canvas.getContext ('2d');
 	const imageModif = document.getElementsByTagName ('img')[0];
+	const imageOriginal = document.getElementsByTagName ('img')[1];
 	const imageFrame = document.getElementById ('frame');
 	const downloadButton = document.getElementsByTagName ('a')[0];
 	const uploader = document.getElementsByTagName ('input')[0];
-	const imageRef = { src: "", width: 0, height: 0, rotation: 0, xo: 0, yo: 100, xu: 0, yu: 0 };
 	uploader.addEventListener ('change', function (event){
-		imageRef.src = URL.createObjectURL (event.target.files[0]);
-		imageModif.src = imageRef.src;
+		const imgSrc = URL.createObjectURL (event.target.files[0]);
+		imageModif.src = imgSrc;
+		imageOriginal.src = imgSrc;
 		const p= event.target.files[0].name.lastIndexOf ('.');
 		downloadButton.download = event.target.files[0].name.substring (0,p) +' bis' + event.target.files[0].name.substring (p);
 	});
-	imageModif.onload = function(){
-		if (imageRef.src ===""){
-			imageRef.width = this.width;
-			imageRef.height = this.height;
-			canvas.height = this.height *300/ this.width;
-			canvas.width = 300;
-			imageFrame.style.height = canvas.width + 'px';
-			context.drawImage (imageModif, 0, 0, canvas.width, canvas.height);
-	}}
+	HTMLImageElement.prototype.adaptFrame = function (width, height){
+		this.style.width = width + 'px';
+		this.style.height = height + 'px';
+		imageFrame.style.width = width + 'px';
+		imageFrame.style.height = height + 'px';
+		this.width = width;
+		this.height = height;
+	}
+	imageOriginal.onload = function(){ imageModif.adaptFrame (300, this.height *300/ this.width); }
 	function tumble90degree(){
-		const img = new Image();
-		img.src = canvas.toDataURL();
-		context.rotate (Math.PI /2);
-		context.drawImage (img, 0, - canvas.width);
-		/*
 		canvas.width = imageModif.height;
 		canvas.height = imageModif.width;
+		context.rotate (Math.PI /2);
 		console.log (canvas.width, canvas.height, imageModif.width, imageModif.height);
-		context.drawImage (imageModif, 0, - canvas.width);
+	//	context.drawImage (imageModif, 0, - canvas.width);
 		context.drawImage (imageModif, 0, - canvas.width, canvas.width, canvas.height);
 		imageModif.src = canvas.toDataURL();
 		imageModif.adaptFrame (canvas.width, canvas.height);
 		console.log (imageModif.width, imageModif.height, imageModif.style.width, imageModif.style.height, canvas.width, canvas.height, imageFrame.style.width, imageFrame.style.height);
-		*/
 	}
 	// bouger les lignes de recadrage
 	Element.prototype.getInputsByType = function (typeName){ return []; }
