--- a/image vd.html
+++ b/image vd.html
@@ -104,6 +104,15 @@
 	const imageRef = { src: "", width: 0, height: 0, rotation: 0, xo: 0, yo: 0, xu: 100, yu: 100, nbRotation: 0 };
 	const linkDownload = document.getElementsByTagName ('a')[0];
 	const uploader = document.getElementsByTagName ('input')[0];
+
+	function loadFirstImg (imgSrc, imgName){
+		imageRef.src = imgSrc;
+		imageModif.src = imageRef.src;
+		const p= imgName.lastIndexOf ('.');
+		linkDownload.download = imgName.substring (0,p) +' bis' + imgName.substring (p);
+		imageModif.alt = imgName.substring (0,p);
+	}
+	loadFirstImg ('quadrillage.bmp', 'quadrillage.bmp');
 	uploader.addEventListener ('change', function (event){
 		imageRef.src = URL.createObjectURL (event.target.files[0]);
 		imageModif.src = imageRef.src;
@@ -112,14 +121,15 @@
 		imageModif.alt = event.target.files[0].name.substring (0,p);
 	});
 	imageModif.onload = function(){
-		if ('blob:null/' === this.src.substring (0,10)){
+		if ('blob:null/' === this.src.substring (0,10) || true){
 			const img = new Image();
 			img.src = this.src;
 			imageRef.width = img.width;
 			imageRef.height = img.height;
-			/*
+			console.log (img.width, img.height);
 			canvas.height = this.height;
 			canvas.width = this.width;
+			/*
 			imageFrame.style.height = canvas.height + 'px';
 			imageFrame.style.width = canvas.width + 'px';
 			context.drawImage (this, 0, 0, canvas.width, canvas.height);
@@ -134,14 +144,17 @@
 		canvas.width = imageModif.height;
 		canvas.height = imageModif.width;
 		context.rotate (Math.PI /2);
-		context.drawImage (imageModif, 0, - imageModif.height, canvas.height, canvas.width);
+		context.drawImage (imageModif, 0, - imageModif.height);
+	//	context.drawImage (imageModif, 0, - imageModif.height, canvas.height, canvas.width);
 		imageModif.src = canvas.toDataURL();
 		imageModif.width = canvas.width;
 		imageModif.height = canvas.height;
-		const parentStyle = window.getComputedStyle (imageFrame);
+		/*
+		imageFrame.style.height = canvas.height + 'px';
+		imageFrame.style.width = canvas.width + 'px';
+		*/
 		imageModif.left = (150- imageModif.width /2) + 'px';
 		imageModif.top = (150- imageModif.height /2) + 'px';
-		console.log (parentStyle.width, imageModif.width, imageModif.left, parentStyle.height, imageModif.height, imageModif.top);
 		imageRef.nbRotation +=1;
 		if (imageRef.nbRotation ===4) imageRef.nbRotation =0;
 	}
@@ -172,6 +185,10 @@
 		else return [];
 	}
 	const movingLines = imageFrame.getElementsByTagName ('p');
+	movingLines[0].style.left = '0%';
+	movingLines[1].style.left = '100%';
+	movingLines[2].style.top = '0%';
+	movingLines[3].style.top = '100%';
 	const movingInputs = document.body.getInputsByType ('range');
 	movingInputs[0].onchange = function(){
 		movingLines[0].style.left = this.value + '%';
